[package]
name = "code_snippet_generator"
authors = ["Devan Looches <devan.looches@gmail.com>"]
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A proc_macro for turning a snippet of code into colorized html."
keywords = ["html", "code-snippet", "syntax-highlighting", "web"]
repository = "https://github.com/devanlooches/code_snippet_generator"
documentation = "https://docs.rs/code_snippet_generator/0.1.1/code_snippet_generator/"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-error = "1.0.4"
quote = "1.0.18"
rustfmt-wrapper = "0.1.0"
syn = "1.0.96"
synoptic = "1.2.0"
web-sys = "0.3.57"

[features]
html = []
